# xa_transactions

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  README.md  pyproject.toml
.ai/: INDEX.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  tag-on-main.yml
docs/: CELERY.md  DJANGO.md
examples/: basic_usage.py  celery_usage.py  custom_store_example.py  django_usage.py  recovery_example.py
scripts/: check_dev_dependencies.sh  pre_commit_pytest_unit.sh  setup_local_env.sh
tests/: test_adapter_unit.py  test_coordinator_unit.py  test_recovery_unit.py  test_types.py
tests/integration/: test_celery_extra.py  test_django_extra.py
xa_transactions/: __init__.py
xa_transactions/core/: __init__.py  adapter.py  coordinator.py  store.py
xa_transactions/infrastructure/: __init__.py  connections.py  recovery.py
xa_transactions/integrations/: __init__.py  celery.py  django.py
xa_transactions/observability/: __init__.py  hooks.py  metrics.py
xa_transactions/types/: __init__.py  exceptions.py  protocols.py  types.py
